// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Page Snapshots renders EmployeeCompletePage unchanged 1`] = `
<div>
  <div
    class="text-center p-4"
  >
    データを読み込んでいます...
  </div>
</div>
`;

exports[`Page Snapshots renders EmployeeConfirmPage unchanged 1`] = `
<div>
  <div
    class="text-center p-4"
  >
    Đang tải dữ liệu...
  </div>
</div>
`;

exports[`Page Snapshots renders EmployeeDetailPage unchanged 1`] = `
<div>
  <div
    class="box-shadow"
  >
    <div
      class="notification-box"
    >
      <h1
        class="msg-title"
      >
        ユーザの登録が完了しました。 or ユーザの更新が完了しました。 or ユーザの削除が完了しました。
      </h1>
      <div
        class="notification-box-btn"
      >
        <button
          class="btn btn-primary btn-sm"
          type="button"
        >
          OK
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Page Snapshots renders EmployeeEditPage unchanged 1`] = `
<div>
  <div
    class="row"
  >
    <div
      class="p-4 text-center font-weight-bold"
    >
      Đang tải dữ liệu nhân viên...
    </div>
  </div>
</div>
`;

exports[`Page Snapshots renders EmployeeListPage unchanged 1`] = `
<div>
  <div
    class="p-4"
  >
    読み込み中...
  </div>
</div>
`;

exports[`Page Snapshots renders HomePage unchanged and checks for redirection logic 1`] = `<div />`;

exports[`Page Snapshots renders RootLayout unchanged 1`] = `
<DocumentFragment>
  <main>
    <div
      class="container"
    >
      <nav
        class="nav-bar"
      >
        <div
          class="content-main"
        >
          <div
            class="d-flex"
          >
            <a
              class="navbar-brand"
            >
              <img
                alt="logo"
                data-nimg="1"
                decoding="async"
                height="50"
                loading="lazy"
                src="/assets/images/Logo-Luvina.svg"
                style="color: transparent;"
                title="Logo"
                width="100"
              />
            </a>
            <h5
              class="title-brand mr-auto"
            >
              Luvina Software
            </h5>
            <ul
              class="navbar-nav flex-row d-flex"
            >
              <li
                class="nav-item"
              >
                <a
                  href="/employees/adm002"
                >
                  トップ
                </a>
              </li>
              <li
                class="nav-item"
              >
                <a
                  href="/logout"
                >
                  ログアウト
                </a>
              </li>
            </ul>
          </div>
        </div>
      </nav>
      <div
        class="content"
      >
        <div
          class="content-main"
        >
          <div>
            Test Child
          </div>
        </div>
      </div>
      <footer
        class="footer"
      >
        <div
          class="content-main"
        >
          <p>
            Copyright © 2026 ルビナソフトウエア株式会社. All rights reserved.
          </p>
        </div>
      </footer>
    </div>
  </main>
</DocumentFragment>
`;
